Fix cookie consent view on mobile

--- a/private/style.css
+++ b/private/style.css
@@ -461,6 +461,56 @@ button:active {
 
 
 
+
+#cookieConsent p {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #2b2b2b; /* Dark background color */
+  color: white; /* White text color */
+  text-align: center;
+  z-index: 1000; /* Ensure it appears on top of other content */
+  box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.3); /* Optional: Add a shadow for some depth */
+}
+
+
+#cookieConsent p {
+  margin: 0;
+  padding: 0;
+  font-size: 0.75rem;
+}
+
+#cookieConsent a {
+  text-decoration: underline;
+}
+
+#cookieConsent button {
+  padding: 1vh 2vh;
+  margin: 1vh 0.5vh;
+  cursor: pointer;
+  border-radius: 0px;
+  font-size: 0.8rem;
+  border: 2px solid rgb(2, 95, 161);
+}
+
+#acceptCookies {
+background-color: rgb(2, 95, 161);
+}
+
+p #rejectCookies {
+padding: 1vh 1.6vh;
+}
+
+#cookieConsent button:hover {
+  background-color: rgb(0, 152, 209);
+}
+
+.no-color-link {
+color: #333;
+}
+
+
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 75vh) {
   .regularImage {
@@ -537,62 +587,5 @@ button:active {
     background-color: skyblue;
     filter: drop-shadow(0vw 0vw 0.2rem white) drop-shadow(0vw 0vw 0.15rem black);
   }
-
-
-
-
-  
-  #cookieConsent p {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #2b2b2b; /* Dark background color */
-    color: white; /* White text color */
-    padding: 15px;
-    text-align: center;
-    z-index: 1000; /* Ensure it appears on top of other content */
-    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.3); /* Optional: Add a shadow for some depth */
-}
-
-#cookieConsent #cookie-popup {
-    max-width: 800px; /* Limit the width of the popup content */
-    margin: 0 auto; /* Center it horizontally */
-}
-
-#cookieConsent p {
-    margin: 0;
-    padding: 0;
-    font-size: 14px;
-}
-
-#cookieConsent a {
-    text-decoration: underline;
-}
-
-#cookieConsent button {
-    padding: 10px 20px;
-    margin: 10px 5px;
-    cursor: pointer;
-    border-radius: 0px;
-    font-size: 14px;
-    border: 2px solid rgb(2, 95, 161);
-}
-
-#acceptCookies {
-  background-color: rgb(2, 95, 161);
-}
-
-p #rejectCookies {
-  padding: 10px 16px;
-}
-
-#cookieConsent button:hover {
-    background-color: rgb(0, 152, 209);
-}
-
-.no-color-link {
-  color: #333;
-}
 
 }
